[package]
name = "book"
version = "0.1.0"
authors = ["tiagodepalves <tiagodepalves@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "hello",
    "guess",
    "minigrep",
    "cacher",
    "cons",
    "nonmax",
]
